generando conflictos en gitHUB

--- a/02 - Ramas/index.html
+++ b/02 - Ramas/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Estoy en la rama auxiliar y además estoy aprendiendo git con los coders de Lovelace</h1>
+    <h1>Estoy en la rama auxiliar y además estoy aprendiendo git con los coders de Lovelace, andrea por favor dame tu número</h1>
     <h1>21/02/24</h1>
     <h1>Me gusta andrea</h1>
 </body>
